--- a/Popularity.html
+++ b/Popularity.html
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title class="title">Hades II Revenue </title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Popularity</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon_io/favicon.ico">
 </head>
+
 <body>
-    <div class="link">
+   <div class="link">
     <a href="Home.html">Home</a>
     <a href="Popularity.html">Popularity</a>
     <a href="Graphics.html">Graphics</a>
     <a href="Revenue.html">Revenue</a>
         </div>
-        </body>
-        </html>
+  <header>
+    <h1>Hades II Popularity</h1>
+  </header>
+<img class="Hades1" src="https://static.wikia.nocookie.net/powerlisting/images/2/2e/Popularity-300x235.jpg/revision/latest?cb=20160210234240" alt="Popularity"/>
+ <div class="cit">Image by Superpower Wiki</div>
+<main>
+    <section class="content-box">
+      <div class="Para">
+        Hades 2 became popular thanks to a combination of the original game’s strong reputation,
+        Supergiant Games’ distinctive art and storytelling style, and an early access launch
+        that generated huge excitement. Fans of Hades were already eager for a sequel, and
+        Hades 2 delivered with deeper combat, new characters rooted in Greek mythology,
+        and a larger, more ambitious world. Streamers and gaming communities amplified the hype
+        by showcasing its polished early gameplay, which felt more like a full release than a work-in-progress.
+        Supergiant’s consistent updates, transparent development approach, and high-quality production
+        kept players engaged, helping the game maintain momentum and spread through word of mouth.
+      </div>
+
+       <div class="Para">
+        Hades 2 also benefited from perfect timing and strong platform visibility; it launched into
+        early access during a period with relatively few major game releases, giving it space to dominate
+        gaming discussions. Its roguelike structure encouraged replayability, letting players experiment
+        with varied weapons, magic systems, and upgrades—which kept content creators producing new videos 
+        and streams. The game’s narrative approach—revealing story through repeated runs—gave players a sense
+        of ongoing discovery that fueled community theories and fan art.
+      </div>
+
+       <div class="Para">
+        One more factor behind Hades II’s success is its remarkable sense of momentum and discovery.
+        The game constantly rewards players with new dialogue, mechanics, environments, and surprises,
+        making every run feel meaningful rather than repetitive. This steady stream of novelty keeps
+        players engaged for far longer than typical roguelikes. Supergiant’s attention to pacing—
+        introducing characters at the perfect moment and tying progression to both skill and narrative—
+        gives the game a “bingeable” quality that keeps people coming back and spreading the hype.
+      </div>
+    </section>
+  </main>
+
+</body>
+</html>
+
+
+
+
+
