--- a/Revenue.html
+++ b/Revenue.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class="title">Hades II Revenue </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon_io/favicon.ico">
 </head>
 <body>
     <div class="link">
@@ -14,6 +18,7 @@
   <h1>Hades II Revenue </h1>
 </div>
 <img class="Hades1" src="https://mail.google.com/mail/u/0?ui=2&ik=f0d24a2cdd&attid=0.1&permmsgid=msg-f:1850514139116163754&th=19ae58ce19db52aa&view=att&disp=safe&realattid=f_miqd2kjf0&zw" alt="Revenue"/>
+<div class="cit">Image by ChatGPT</div>
 <div class="cont1">
   <p>
     Public estimates suggest that Hades II has generated tens of millions of dollars in revenue so far, but all figures are third party estimates rather than official numbers from Supergiant Games. Different analytics sites use different models, so numbers vary and should be treated as approximations.
