--- a/Graphics.html
+++ b/Graphics.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title class="title">Hades II Revenue </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon_io/favicon.ico">
 </head>
 <body>
     <div class="link">
